HotFix: Overflow Issue

--- a/solve_sets/static/css/desktop.css
+++ b/solve_sets/static/css/desktop.css
@@ -4,7 +4,7 @@
   }
 
   main div article {
-    height: 90%;
+    height: 100%;
   }
 
   main .sets_solved {
@@ -12,12 +12,6 @@
     justify-content: space-around;
     align-items: center;
     overflow-y: hidden;
-  }
-
-  .set {
-    width: 100%;
-    margin: 2px 0;
-    text-align: left;
   }
 
   .main__article {
@@ -29,8 +23,22 @@
     height: 100%;
   }
 
-  .venn__section__container article {
+  .sets__container__info {
     overflow-y: auto;
+  }
+
+  .sets__container__info article {
+    height: fit-content;
+    text-align: left;
+  }
+
+  .sets__container__info article section {
+    width: 100%;
+    text-align: left
+  }
+
+  .set {
+    text-align: left;
   }
 
   .section__container p {
